# django-ninja-enjoyer

./: .env_example  .gitignore  .pre-commit-config.yaml  Makefile  Readme.md  entrypoint.sh  pyproject.toml
core/api/: filters.py  schemas.py  urls.py
core/api/v1/: urls.py
core/api/v1/customers/: handlers.py
core/api/v1/products/: handlers.py  schemas.py
core/api/v1/reviews/: handlers.py  schemas.py
core/apps/common/: exceptions.py  models.py
core/apps/common/clients/: elasticsearch.py
core/apps/customers/: apps.py  models.py
core/apps/customers/entities/: customers.py
core/apps/customers/exceptions/: codes.py  customers.py
core/apps/customers/migrations/: 0001_initial.py
core/apps/customers/services/: codes.py  customers.py  senders.py
core/apps/customers/use_cases/auth/: authorize.py  confirm_authorization.py
core/apps/products/: admin.py
core/apps/products/entities/: products.py  reviews.py
core/apps/products/exeptions/: review.py
core/apps/products/filters/: products.py
core/apps/products/migrations/: 0001_initial.py  0002_rename_is_active_product_is_visible.py  0003_alter_product_options.py  0004_review.py  0005_product_tags.py
core/apps/products/models/: __init__.py  products.py  reviews.py
core/apps/products/services/: products.py  reivews.py
core/apps/products/use_cases/reviews/: create.py
core/project/: containers.py  middlewares.py  urls.py
core/project/settings/: local_example.py  main.py
docker_compose/: app.yaml  storages.yaml
tests/services/: test_products.py
